--- a/src/i_themes/_default.scss
+++ b/src/i_themes/_default.scss
@@ -4,8 +4,9 @@ _________________________________________*/
 
 //this theme use the default skins, but can be associate to other compatible skins.
 
-@import 'default/_customs_blocks.scss' ;
+@import 'default/_extras.scss' ;
 @import 'default/_navbars.scss' ;
+@import 'default/_customs_blocks.scss' ;
 
 
 
