--- a/src/i_themes/default/_navbars.scss
+++ b/src/i_themes/default/_navbars.scss
@@ -1,409 +1,16 @@
 /*
- * For default theme. Here is the style definition of some custom navbars.
-__________________________________________________________________________*/
+ * For default theme. Here is the style definition of iui custom navbar.
+_______________________________________________________________________*/
 
 
-.i-nav { //use for navbar declaration.
-    
-    @include global-bg-look() ;
-    
-    padding: 0em 0.1em ;
-    border-bottom: 1px solid $dark-color ;
-    margin-top: 0px ;
-    position: relative ;
-    font-size: $menu-font-size ;
-    
-    >ul { //main item's menu container
-        
-        margin: 0px ;
-        
-        li { // for item's menu
-            
-            display: inline-block ;
-            margin-right: $navbar-margin + 0.3 ;
-            font-family: $item-font-family ;
-            position: relative ;
-            padding: 0em ;
-            box-sizing: border-box ;
-            vertical-align: top ;
-
-            &, a {
-                
-                @include global-bg-look("!transparent") ;
-            }
-            
-            a {
-                
-                text-decoration: none ;
-                padding: $navbar-padding 0.2em ;
-                display:inline-block ;
-                max-width: $menu-max-width ;
-
-                @include style-overflow-of("line") ;
-                
-                &:hover {
-
-                    color: $hover-color ;
-                }
-                &:focus {
-                    
-                    @include style-focus-of("none") ;
-                    
-                    color: $hover-color ;
-                }
-            }
-            
-            ul { //sub-item's menu container
-                
-                @include global-bg-look() ;
-                
-                position: absolute ;
-                top: $navbar-dsm-position ;
-                padding: 0em ;
-                width: $navbar-dsm-width ;
-                box-shadow: 0px 3px 3px $shadow-color ;
-                font-size: $menu-sub-font-size ;
-                z-index: 10 ;
-                
-                li { //sub-item's menu
-                    
-                    display: block ;
-                    padding: 0.1em ;
-                    margin: $navbar-dsm-margin 0em ;
-                    
-                    a {
-                        
-                        padding: $navbar-padding ;
-                        display: block ;
-                        margin: 0px ;
-                    }
-                    
-                    ul {
-                        
-                        top: 0em ;
-                        right: -($navbar-dsm-width) ;
-                    }
-                    
-                    &:first-of-type {
-                        
-                        margin-top: 0.7em ;
-                    }
-                }
-            }
-            
-            >ul {
-                
-                display: none ;
-            }
-            
-            &:hover {
-
-                color: $hover-color ;
-                cursor: pointer ;
-                
-                >ul {
-                    
-                    display: block ;
-                }
-                
-                >a:not([href]) {
-                    
-                    color: $hover-color ;
-                }
-            }
-            
-            &#current-page, &.active-item {
-                
-                a {
-                    
-                    color:$select-color ;
-                    font-weight: bold ;
-                }
-            }
-            
-            &.unfocusable, &:hover.unfocusable, &:focus.unfocusable {
-                
-                @include global-bg-look("!transparent", darken( $light-color, 45%) ) ;
-            }
-        }
-    }
-    
-    &.b-style { //border style for selection
-        
-        >ul li {
-                        
-            &#current-page, &.active-item {
-
-                border: $navbar-active-border ;
-            }
-            
-            &:hover {
-                
-                border: $navbar-border ;
-            }
-        }
-    }  
-    &.bb-style { //border-bottom style for selection
-        
-        &>ul>li>a {
-            
-            padding-left: 0.1em ;
-            padding-right: 0.1em ;
-        }
-        
-        >ul li {
-                        
-            &#current-page, &.active-item {
-
-                border-bottom: $navbar-active-border ; 
-            }
-            
-            &:hover {
-
-                border-bottom: $navbar-border ; 
-            }
-        }
-    } 
-    &.bt-style { //border-top style for selection
-        
-        >ul li {
-                        
-            &#current-page, &.active-item {
-
-                border-top: $navbar-active-border ;  
-            }
-            
-            &:hover {
-                
-                border-top: $navbar-border ;  
-            }
-        }
-    } 
-    &.bl-style { //border-left style for selection
-        
-        >ul li {
-            
-            &#current-page, &.active-item {
-
-                border-left: $navbar-active-border ;
-            }
-            
-            &:hover {
-
-                border-left: $navbar-border ;   
-            }
-        }
-    }
-    &.br-style { //border-right style for selection
-        
-        >ul li {
-                        
-            &#current-page, &.active-item {
-
-                border-right: $navbar-active-border ; 
-            }
-            
-            &:hover {
-
-                border-right: $navbar-border ;
-            }
-        }
-    }
-    &.bg-style { //background style for selection
-        
-        >ul li {
-                        
-            &:hover, &#current-page, &.active-item {
-
-                @include global-bg-look( $select-color, $white-color) ;
-                
-                >a:not([href]) {
-
-                    color: $white-color ;
-                }
-            }
-            
-            &#current-page, &.active-item {
-
-                a {
-
-                    color: $white-color ;
-                }
-            }  
-            
-            a:hover {
-                
-                @include global-bg-look( "!transparent", $white-color) ;
-            }
-        }
-    }
-    
-    &.t-fixed { //fixed on top
-        
-        @extend .fixed ;
-        top: 0px ;
-        left: 0px ;
-        width: 100% ;
-        z-index: $global-z-index ;
-    } 
-    &.b-fixed { //fixed on bottom
-        
-        @extend .fixed ;
-        bottom: 0px ;
-        left: 0px ;
-        width: 100% ;
-        border: none ;
-        border-top: 1px solid $dark-color ;
-        z-index: $global-z-index ;
-        
-        >ul li >ul {
-
-            top: auto ;
-            bottom: $navbar-dsm-position ;
-            box-shadow: 0px -3px 3px $shadow-color ;
-
-            li ul {
-
-                top: auto ;
-                bottom: 0em ;
-            }
-        }
-    }
-    
-    &.mi-style { //Wink: from a homework website menubar style for tutorial (for maths and computer science)
-
-        >ul >li {
-
-            position: inherit ; 
-
-            ul {
-
-                left: 0px ;
-                top: $navbar-dsm-position + 0.3 ;
-                width: 100% ;
-                border-top: 1px solid darken( $light-color, 20%) ;
-                text-align: center ;
-
-                &:hover {
-
-                    border-top: 1px solid $hover-color ;
-                }
-
-                li {
-
-                    display: inline-block ;
-                    position: static ;
-                    padding: $navbar-padding 0em ;
-                    margin-right: $navbar-margin + 0.3 ;
-                    
-                    a {
-
-                        display: inline ;
-                        padding: $navbar-padding 0.2em ;
-                    }
-
-                    ul {
-
-                        top: $navbar-dsm-position + 0.5 ;
-                    }
-                }
-            }
-        }
-        
-        /*&.bb-style {
-
-            >ul >li ul {
-
-                top: $navbar-dsm-position + 0.45 ;
-
-                li ul {
-
-                    top: $navbar-dsm-position + 0.6 ;
-                }
-            }
-        }*/
-    }
-    
-    &.mi-bar { //From first umiproject's website menubar style
-
-        box-shadow: 0px 4px 5px $shadow-color ;
-        border: none ;
-        padding: $navbar-padding+0.2 $navbar-padding ($navbar-padding - 0.2) $navbar-padding ;
-
-        &.b-fixed {
-
-            box-shadow: 0px -4px 5px $shadow-color ;
-            border: none ;
-            padding: ($navbar-padding - 0.1) $navbar-padding $navbar-padding+0.1 $navbar-padding ;
-
-            >ul {
-                
-                li {
-                    
-                    vertical-align: bottom ;
-                    
-                    >ul {
-                        
-                        top: auto ;
-                        bottom: $navbar-dsm-position + 0.2 ;
-                        box-shadow: 0px -3px 3px $shadow-color ;
-
-                        li ul {
-
-                            top: auto ;
-                            bottom: 0em ;
-                        }
-                    }
-                }
-
-            }
-        }
-        
-        &.mi-style {
-
-            >ul >li ul {
-                
-                top: $navbar-dsm-position + 1.1 ;
-                
-                li {
-
-                    margin: $navbar-margin ($navbar-margin - 0.1) ;
-                    
-                    ul {
-                     
-                        top: $navbar-dsm-position + 0.7 ;
-                    }
-                }
-            }
-            
-            &.b-fixed {
-                
-                >ul >li ul {
-
-                    top: auto ;
-                    bottom: $navbar-dsm-position + 0.9 ;
-                    border: none ;
-                    border-bottom: 1px solid darken( $light-color, 20%) ;
-
-                    li {
-
-                        margin: $navbar-margin ($navbar-margin - 0.1) ;
-
-                        ul {
-
-                            top: auto;
-                            bottom: $navbar-dsm-position + 0.7 ;
-                        }
-                    }
-                    
-                    &:hover {
-
-                        border: none ;
-                        border-bottom: 1px solid $hover-color ;
-                    }
-                }
-                
-            }
-        }
-    }
-}
+@import 'navbars/i_nav.scss' ;
+@import 'navbars/mi_style.scss' ;
+@import 'navbars/b_style.scss' ;
+@import 'navbars/bb_style.scss' ;
+@import 'navbars/bg_style.scss' ;
+@import 'navbars/bl_style.scss' ;
+@import 'navbars/br_style.scss' ;
+@import 'navbars/bt_style.scss' ;
+@import 'navbars/b_fixed.scss' ;
+@import 'navbars/t_fixed.scss' ;
+@import 'navbars/mi_bar.scss' ;
