--- a/src/i_themes/_default.scss
+++ b/src/i_themes/_default.scss
@@ -4,9 +4,10 @@ _________________________________________*/
 
 //this theme use the default skins, but can be associate to other compatible skins.
 
-@import 'default/_extras.scss' ;
-@import 'default/_navbars.scss' ;
-@import 'default/_customs_blocks.scss' ;
+@import 'default/extras.scss' ;
+@import 'default/navbars.scss' ;
+@import 'default/forms.scss' ;
+@import 'default/customs_blocks.scss' ;
 
 
 
